cpcb-dashboard/.next/dev/logs/next-development.log
[00:00:03.672] Server  LOG     ✓ Ready in 2.5s
[00:00:09.717] Server  LOG     ○ Compiling / ...
[00:00:11.202] Browser INFO    %cDownload the React DevTools for a better development experience: https://react.dev/link/react-devtools font-weight:bold
[00:00:46.697] Server  LOG     ○ Compiling /dashboard ...
[00:00:51.992] Server  WARN    Database connection failed (expected during build/without env vars). Using In-Memory Mock.
[00:00:52.011] Server  WARN    Database connection failed (expected during build/without env vars). Using In-Memory Mock.
[00:01:06.326] Server  ERROR   Prediction error: Error: Command failed: python -c "import sys; sys.path.append('C:\Users\ayush\Desktop\Main EL 3rd sem'); from predict_pollution import PollutionPredictor; import json; predictor = PollutionPredictor(); data = json.loads('{"factory_id":"TX-B","factory_type":"Textile","location_km_from_origin":15,"flow_rate_m3ph":350,"turbidity_ntu":200,"ph":7,"conductivity_us_cm":2000,"temperature_c":30,"chromium_mg_l":0.1,"copper_mg_l":0.5,"tds_mg_l":1500,"uv_vis_absorbance":0.5}'); result = predictor.predict_single(data); print(json.dumps(result))"
  File "<string>", line 1
    import sys; sys.path.append('C:\Users\ayush\Desktop\Main EL 3rd sem'); from predict_pollution import PollutionPredictor; import json; predictor = PollutionPredictor(); data = json.loads('{factory_id:TX-B,factory_type:Textile,location_km_from_origin:15,flow_rate_m3ph:350,turbidity_ntu:200,ph:7,conductivity_us_cm:2000,temperature_c:30,chromium_mg_l:0.1,copper_mg_l:0.5,tds_mg_l:1500,uv_vis_absorbance:0.5}'); result = predictor.predict_single(data); print(json.dumps(result))
                                ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: (unicode error) 'unicodeescape' codec can't decode bytes in position 2-3: truncated \UXXXXXXXX escape

[00:04:44.369] Server  WARN    Python prediction failed, using fallback: "Command failed: python \"C:\\Users\\ayush\\Desktop\\Main EL 3rd sem\\predict_pollution.py\" --predict '{\"factory_id\":\"TX-B\",\"factory_type\":\"Textile\",\"location_km_from_origin\":15,\"flow_rate_m3ph\":350,\"turbidity_ntu\":200,\"ph\":7,\"conductivity_us_cm\":2000,\"temperature_c\":30,\"chromium_mg_l\":0.1,\"copper_mg_l\":0.5,\"tds_mg_l\":1500,\"uv_vis_absorbance\":0.5}'\n"
[00:05:03.885] Browser ERROR   Received NaN for the `%s` attribute. If this is expected, cast the value to a string. value
[00:05:11.062] Server  WARN    Python prediction failed, using fallback: "Command failed: python \"C:\\Users\\ayush\\Desktop\\Main EL 3rd sem\\predict_pollution.py\" --predict '{\"factory_id\":\"TX-B\",\"factory_type\":\"Textile\",\"location_km_from_origin\":15,\"flow_rate_m3ph\":350,\"turbidity_ntu\":200,\"ph\":7,\"conductivity_us_cm\":2000,\"temperature_c\":30,\"chromium_mg_l\":0.1,\"copper_mg_l\":0.5,\"tds_mg_l\":1500,\"uv_vis_absorbance\":2.5}'\nTraceback (most recent call last):\r\n  File \"C:\\Users\\ayush\\Desktop\\Main EL 3rd sem\\predict_pollution.py\", line 166, in <module>\r\n    predictor = PollutionPredictor()\r\n                ^^^^^^^^^^^^^^^^^^^^\r\n  File \"C:\\Users\\ayush\\Desktop\\Main EL 3rd sem\\predict_pollution.py\", line 25, in __init__\r\n    print(f\"\\u2713 Model loaded (Accuracy: {self.metadata['accuracy']*100:.2f}%)\")\r\n  File \"C:\\Users\\ayush\\AppData\\Local\\Programs\\Python\\Python312\\Lib\\encodings\\cp1252.py\", line 19, in encode\r\n    return codecs.charmap_encode(input,self.errors,encoding_table)[0]\r\n           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^\r\nUnicodeEncodeError: 'charmap' codec can't encode character '\\u2713' in position 0: character maps to <undefined>\r\n"
[00:05:11.141] Server  WARN    Database connection failed (expected during build/without env vars). Using In-Memory Mock.
[01:33:10.319] Server  WARN    Database connection failed (expected during build/without env vars). Using In-Memory Mock.
[01:33:10.355] Server  WARN    Database connection failed (expected during build/without env vars). Using In-Memory Mock.
[01:33:21.033] Server  WARN    Python prediction failed, using fallback: "Command failed: python \"C:\\Users\\ayush\\Desktop\\Main EL 3rd sem\\predict_pollution.py\" --predict '{\"factory_id\":\"TX-B\",\"factory_type\":\"Textile\",\"location_km_from_origin\":15,\"flow_rate_m3ph\":350,\"turbidity_ntu\":200,\"ph\":7,\"conductivity_us_cm\":2000,\"temperature_c\":30,\"chromium_mg_l\":0.1,\"copper_mg_l\":0.5,\"tds_mg_l\":1500,\"uv_vis_absorbance\":0.5}'\nTraceback (most recent call last):\r\n  File \"C:\\Users\\ayush\\Desktop\\Main EL 3rd sem\\predict_pollution.py\", line 166, in <module>\r\n    predictor = PollutionPredictor()\r\n                ^^^^^^^^^^^^^^^^^^^^\r\n  File \"C:\\Users\\ayush\\Desktop\\Main EL 3rd sem\\predict_pollution.py\", line 25, in __init__\r\n    print(f\"\\u2713 Model loaded (Accuracy: {self.metadata['accuracy']*100:.2f}%)\")\r\n  File \"C:\\Users\\ayush\\AppData\\Local\\Programs\\Python\\Python312\\Lib\\encodings\\cp1252.py\", line 19, in encode\r\n    return codecs.charmap_encode(input,self.errors,encoding_table)[0]\r\n           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^\r\nUnicodeEncodeError: 'charmap' codec can't encode character '\\u2713' in position 0: character maps to <undefined>\r\n"
[01:33:54.415] Server  WARN    Python prediction failed, using fallback: "Command failed: python \"C:\\Users\\ayush\\Desktop\\Main EL 3rd sem\\predict_pollution.py\" --predict '{\"factory_id\":\"TX-B\",\"factory_type\":\"Textile\",\"location_km_from_origin\":15,\"flow_rate_m3ph\":350,\"turbidity_ntu\":220,\"ph\":11,\"conductivity_us_cm\":2500,\"temperature_c\":35,\"chromium_mg_l\":0.15,\"copper_mg_l\":0.5,\"tds_mg_l\":2000,\"uv_vis_absorbance\":2}'\nTraceback (most recent call last):\r\n  File \"C:\\Users\\ayush\\Desktop\\Main EL 3rd sem\\predict_pollution.py\", line 166, in <module>\r\n    predictor = PollutionPredictor()\r\n                ^^^^^^^^^^^^^^^^^^^^\r\n  File \"C:\\Users\\ayush\\Desktop\\Main EL 3rd sem\\predict_pollution.py\", line 25, in __init__\r\n    print(f\"\\u2713 Model loaded (Accuracy: {self.metadata['accuracy']*100:.2f}%)\")\r\n  File \"C:\\Users\\ayush\\AppData\\Local\\Programs\\Python\\Python312\\Lib\\encodings\\cp1252.py\", line 19, in encode\r\n    return codecs.charmap_encode(input,self.errors,encoding_table)[0]\r\n           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^\r\nUnicodeEncodeError: 'charmap' codec can't encode character '\\u2713' in position 0: character maps to <undefined>\r\n"
[01:33:54.469] Server  WARN    Database connection failed (expected during build/without env vars). Using In-Memory Mock.
[01:39:26.976] Server  WARN    Database connection failed (expected during build/without env vars). Using In-Memory Mock.
[01:39:27.004] Server  WARN    Database connection failed (expected during build/without env vars). Using In-Memory Mock.
[01:40:17.837] Server  WARN    Python prediction failed, using fallback: "Command failed: python \"C:\\Users\\ayush\\Desktop\\Main EL 3rd sem\\predict_pollution.py\" --predict '{\"factory_id\":\"TX-B\",\"factory_type\":\"Textile\",\"location_km_from_origin\":15,\"flow_rate_m3ph\":350,\"turbidity_ntu\":250,\"ph\":9.2,\"conductivity_us_cm\":2000,\"temperature_c\":30,\"chromium_mg_l\":0.2,\"copper_mg_l\":0.5,\"tds_mg_l\":1500,\"uv_vis_absorbance\":0.5}'\nTraceback (most recent call last):\r\n  File \"C:\\Users\\ayush\\Desktop\\Main EL 3rd sem\\predict_pollution.py\", line 166, in <module>\r\n    predictor = PollutionPredictor()\r\n                ^^^^^^^^^^^^^^^^^^^^\r\n  File \"C:\\Users\\ayush\\Desktop\\Main EL 3rd sem\\predict_pollution.py\", line 25, in __init__\r\n    print(f\"\\u2713 Model loaded (Accuracy: {self.metadata['accuracy']*100:.2f}%)\")\r\n  File \"C:\\Users\\ayush\\AppData\\Local\\Programs\\Python\\Python312\\Lib\\encodings\\cp1252.py\", line 19, in encode\r\n    return codecs.charmap_encode(input,self.errors,encoding_table)[0]\r\n           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^\r\nUnicodeEncodeError: 'charmap' codec can't encode character '\\u2713' in position 0: character maps to <undefined>\r\n"
[01:40:17.894] Server  WARN    Database connection failed (expected during build/without env vars). Using In-Memory Mock.
[53:05:55.045] Server  LOG     ✓ Compiled in 4s
[53:06:58.729] Server  LOG     ✓ Compiled in 3s
[53:07:29.241] Browser INFO    %cDownload the React DevTools for a better development experience: https://react.dev/link/react-devtools font-weight:bold
